...
        android:fitsSystemWindows="false"
        android:animateLayoutChanges="true"
        tools:context=".view.ui.reader.manga.MangaReaderActivity">

        <FrameLayout
            style="@style/AppBackground.Reader"
            android:id="@+id/root_frame_manga_reader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"/>

        <include
            android:id="@+id/reader_manga_container_touch_demonstration"
...
